updated the branch

--- a/package.json
+++ b/package.json
@@ -39,5 +39,9 @@
   },
   "devDependencies": {
     "tailwindcss": "^3.1.8"
-  }
+  },
+  "main": "index.js",
+  "repository": "git@AnikHaque:arshadsa/save-life-hospital-management-client.git",
+  "author": "AnikHaque <ekramul15-811@diu.edu.bd>",
+  "license": "MIT"
 }
