--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "daisyui": "^2.31.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.38.0",
     "react-icon": "^1.0.0",
     "react-icons": "^4.6.0",
     "react-messenger-chat-plugin": "^3.0.5",
