--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "daisyui": "^2.31.0",
+    "firebase": "^9.12.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.0.3",
     "react-icon": "^1.0.0",
     "react-icons": "^4.6.0",
     "react-messenger-chat-plugin": "^3.0.5",
