--- a/package.json
+++ b/package.json
@@ -6,15 +6,19 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "axios": "^1.1.3",
     "daisyui": "^2.31.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.38.0",
     "react-icon": "^1.0.0",
     "react-icons": "^4.6.0",
     "react-messenger-chat-plugin": "^3.0.5",
+    "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "swiper": "^8.4.4",
     "tailwindcss": "^3.1.8",
+    "typewriter-effect": "^2.19.0",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.0"
   },
