--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "react-icon": "^1.0.0",
     "react-icons": "^4.6.0",
     "react-messenger-chat-plugin": "^3.0.5",
+    "react-query": "^3.39.2",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.0.8",
     "swiper": "^8.4.4",
     "tailwindcss": "^3.1.8",
     "typewriter-effect": "^2.19.0",
