--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-icon": "^1.0.0",
     "react-icons": "^4.6.0",
     "react-messenger-chat-plugin": "^3.0.5",
+    "react-messenger-customer-chat": "^0.8.0",
     "react-query": "^3.39.2",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
