--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.8",
+    "sweetalert2": "^11.6.2",
     "swiper": "^8.4.4",
     "tailwindcss": "^3.1.8",
     "typewriter-effect": "^2.19.0",
