--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "date-fns": "^2.29.3",
     "firebase": "^9.12.1",
     "framer-motion": "^7.6.2",
+    "lottie-react": "^2.3.1",
     "lottie-web": "^5.9.6",
     "react": "^18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
