--- a/.env.local
+++ b/.env.local
@@ -1,4 +1,4 @@
-REACT_APP_BASE_URL=http://localhost:5000
+REACT_APP_SERVER_BASE_URL=http://localhost:5000
 REACT_APP_SERVER_BASE_URL=http://localhost:5000
 
 REACT_APP_APIKEY=AIzaSyDPjFrJthrkMKaw-b3p3rJd8duBlFYB3jo
