--- a/.env.local
+++ b/.env.local
@@ -1,5 +1,5 @@
 REACT_APP_BASE_URL=http://localhost:5000
-REACT_APP_SERVER_BASE_URL=http://localhost:5000
+REACT_APP_SERVER_BASE_URL=https://powerful-woodland-71455.herokuapp.com/
 
 REACT_APP_APIKEY=AIzaSyDPjFrJthrkMKaw-b3p3rJd8duBlFYB3jo
 REACT_APP_AUTHDOMAIN=hospital-management-syst-79467.firebaseapp.com
