--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "@zoomus/websdk": "^2.8.0",
+    "agora-react-uikit": "^1.1.0",
     "axios": "^1.1.3",
     "daisyui": "^2.31.0",
     "date-fns": "^2.29.3",
