--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "framer-motion": "^7.6.2",
     "lottie-react": "^2.3.1",
     "lottie-web": "^5.9.6",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-day-picker": "^8.3.5",
