--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-day-picker": "^8.3.5",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.0.3",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^7.38.0",
     "react-icon": "^1.0.0",
     "react-icons": "^4.6.0",
