--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-hook-form": "^7.38.0",
     "react-icon": "^1.0.0",
     "react-icons": "^4.6.0",
+    "react-loader-spinner": "^5.3.4",
     "react-messenger-chat-plugin": "^3.0.5",
     "react-messenger-customer-chat": "^0.8.0",
     "react-query": "^3.39.2",
