--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@mui/material": "^5.10.11",
+    "@reduxjs/toolkit": "^1.9.5",
     "@stripe/react-stripe-js": "^1.14.1",
     "@stripe/stripe-js": "^1.42.0",
     "@testing-library/jest-dom": "^5.14.1",
@@ -18,7 +19,7 @@
     "daisyui": "^2.31.0",
     "date-fns": "^2.29.3",
     "firebase": "^9.12.1",
-    "framer-motion": "^7.6.2",
+    "framer-motion": "^10.12.4",
     "lottie-react": "^2.3.1",
     "lottie-web": "^5.9.6",
     "moment": "^2.29.4",
@@ -36,6 +37,7 @@
     "react-messenger-chat-plugin": "^3.0.5",
     "react-messenger-customer-chat": "^0.8.0",
     "react-query": "^3.39.2",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.8",
